syntax = "proto3";

package calculator.v1;

import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

option go_package = "edu-final-calculate-api/pkg/calculator/v1;v1";

// Manages communication between system and calculation agents.
service AgentService {
  // Retrieves a task for execution.
  rpc GetTask(google.protobuf.Empty) returns (GetTaskResponse) {
    option (google.api.http) = {get: "/internal/task"};
  }

  // Submits computation result for a task.
  rpc SubmitTaskResult(SubmitTaskResultRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/internal/task"
      body: "*"
    };
  }
}

// Available mathematical operations.
enum TaskOperation {
  // Undefined operation.
  TASK_OPERATION_UNSPECIFIED = 0;
  // Addition operation (+).
  TASK_OPERATION_ADDITION = 1;
  // Subtraction operation (-).
  TASK_OPERATION_SUBTRACTION = 2;
  // Multiplication operation (*).
  TASK_OPERATION_MULTIPLICATION = 3;
  // Division operation (/).
  TASK_OPERATION_DIVISION = 4;
}

// Computational task for processing.
message Task {
  // Unique identifier.
  string id = 1;
  // First operand.
  double arg1 = 2;
  // Second operand.
  double arg2 = 3;
  // Operation to perform.
  TaskOperation operation = 4;
  // Expected processing duration.
  google.protobuf.Duration operation_time = 5;
}

// Task data for agent.
message GetTaskResponse {
  // Task to process.
  Task task = 1;
}

// Computation result data.
message SubmitTaskResultRequest {
  // Task identifier.
  string id = 1;
  // Computation result.
  double result = 2;
}
